2001-12-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in: Added redhat-7.2 to logindefs_dist_map.

	* runlevel-conf.in: Added redhat-7.2 as a supported platform.

	* network.pl.in (xst_network_xml_parse_interface): modernized.
	Also, pass the whole hash to network_get_file.
	(xst_network_get_broadcast_ping_cmd): redhat-7.2 was missing.
	(xst_network_rh72_get_file): Red Hat 7.2 version.

	* network-conf.in (xml_parse): modernized parse routines.
	(xml_parse_network): same.
	(xml_parse_statichost): same.
	(xml_parse_dialing): same.

2001-12-11  Israel Escalante <israel@ximian.com>

	* Release 0.10.0.

2001-12-13  Israel Escalante  <israel@ximian.com>

	* ishare.pl.in: Added R.H. 7.2 to the list of supported plataforms.

	* internetsharing-conf.in: Added R.H. 7.2 to the list
	  of supported platforms.

2001-12-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-grub.pl.in (xst_boot_grub_replace_label): fix: wrong regexp.

	* util.pl.in (xst_item_is_in_list): style fix.

	* general.pl.in (xst_directive_run): bugfix: the min arg count
	was wrong.

	* boot-lilo.pl.in (xst_boot_lilo_verify_entrylabel): Verify
	an entry label's lilo.conf compliance. Uff: no docs on this in
	the man page.
	(xst_boot_lilo_verify): The lilo verification routine.

	* boot-grub.pl.in (xst_boot_grub_verify): No verification
	cases required for this to this moment. Just return success.

	* boot-conf.in (verify_print): print verification result.
	(verify): new verification directive. Other pertinent backends
	should implement this too.

2001-12-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_interface_replace_table): Don't replace
	in the network-script files.

	* boot.pl.in (xst_boot_conf_get): Oops: redhat 72 was behaving
	like 62 for testing.
	(xst_boot_entry_set): Use the copy for replacing. Was contaminating
	further iterations.
	(xst_boot_conf_set): rh 72 behaving like 62 for testing.
